syntax = "proto3";

option csharp_namespace = "Mystwood.Landing.GrpcLarp";

package larp;

message ProfileEmail {
    string email = 1;
    bool verified = 2;
}

message Profile {
    string name = 1;
    string location = 2;
    repeated ProfileEmail emails = 3;
    string phone = 4;
}

message Character {
    string character_id = 1;
    string live_json = 2;
    bool is_live = 3;
    string draft_json = 4;
    bool is_review = 5;
    string metadata = 6;
}

message CharacterSummary {
    string character_id = 1;
    string character_name = 2;
    string home_chapter = 3;
    string player_name = 4;
    string specialty = 5;
    int32 level = 6;
    bool is_live = 7;
    bool is_review = 8;
}

enum ValidationResponseCode {
    SUCCESS = 0;
    EXPIRED = 1;
    INVALID = 2;
}

service Larp {
    rpc InitiateLogin(InitiateLoginRequest) returns (InitiateLoginResponse) {}
    rpc ConfirmLogin(ConfirmLoginRequest) returns (ConfirmLoginResponse) {}

    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse) {}
    
    rpc SetProfileName(UpdateProfileRequest) returns (UpdateProfileResponse) {}
    rpc SetProfileLocation(UpdateProfileRequest) returns (UpdateProfileResponse) {}
    rpc SetProfilePhone(UpdateProfileRequest) returns (UpdateProfileResponse) {}
    rpc AddProfileEmail(UpdateProfileRequest) returns (UpdateProfileResponse) {}
    rpc RemoveProfileEmail(UpdateProfileRequest) returns (UpdateProfileResponse) {}

    rpc GetCharacters(GetCharactersRequest) returns (GetCharactersResponse) {}
    rpc GetCharacter(GetCharacterRequest) returns (CharacterResponse) {}
    rpc CreateCharacterDraft(CreateCharacterRequest) returns (CharacterResponse) {}
    rpc UpdateCharacterDraft(UpdateCharacterRequest) returns (CharacterResponse) {}
}

// Include this in any message that requires an authenticated session

message SessionIdentifier {
    string session_id = 1;
}

// Requests and Responses

message InitiateLoginRequest {
    string email = 1;
}

message InitiateLoginResponse {
    ValidationResponseCode status_code = 1; 
    string message = 2;
}

message ConfirmLoginRequest {
    string email = 1;
    string code = 2;
}

message ConfirmLoginResponse {
    SessionIdentifier session = 1;
    ValidationResponseCode status_code = 2;
    string message = 3;
    Profile profile = 4;
}

message UpdateProfileRequest {
    SessionIdentifier session = 1;
    string value = 2;
}

message UpdateProfileResponse {
    Profile profile = 1;
}

message GetProfileRequest {
    SessionIdentifier session = 1;
}

message GetProfileResponse {
    Profile profile = 1;
}

message GetCharactersRequest {
    SessionIdentifier session = 1;
}

message GetCharactersResponse {
    repeated CharacterSummary characters = 1;
}

message CreateCharacterRequest {
    SessionIdentifier session = 1;
    string character_name = 2;
    string home_chapter = 3;
}

message UpdateCharacterRequest {
    SessionIdentifier session = 1;
    string character_id = 2;
    string draft_json = 3;
    bool is_review = 4;
}

message GetCharacterRequest {
    SessionIdentifier session = 1;
    string character_id = 2;
}

message CharacterResponse {
    Character character = 1;
}
